# credit-risk-modeling

./: .env.example  .flake8  .gitignore  BEST_PRACTICES.md  CONTRIBUTING.md  Dockerfile  LICENSE  PROJECT_ARCHITECTURE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SETUP_CHECKLIST.md  SETUP_SUMMARY.md  docker-compose.yml  flake8  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
config/: config.yaml
data/: README.md
data/processed/: feature_names.txt
models/: feature_names.json  optimized_features.json
notebooks/: 01_eda_exploration.ipynb  02_feature_engineering.ipynb  03_model_training.ipynb  04_model_evaluation.ipynb  05_model_optimization.ipynb
reports/: optimization_summary.txt
scripts/: download_data.sh
src/: __init__.py  pipeline.py
src/data/: __init__.py  preprocess.py
src/models/: __init__.py  predict.py
tests/: test_placeholder.py
